@startuml ui-input-action-class-relationship
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0
skinparam defaultFontSize 11

title 输入动作播放类关系

legend right
  |= 模块 |= 颜色 |= 说明 |
  | :ime-engine | <#FFF3E0> | 接口/数据定义 |
  | :ime-ui | <#E8F5E9> | UI 实现 |
  | :app | <#E3F2FD> | 应用集成 |
endlegend

' ===== :ime-engine 模块 =====

package ":ime-engine" #FFF3E0 {

  package "输入动作模型" {
    abstract class InputAction <<(S,#FFF3E0)>> {
      + startTime: Long
    }
    class KeyDown <<(S,#FFF3E0)>> {
      + key: InputKey
    }
    class SwipeTo <<(S,#FFF3E0)>> {
      + fromKey: InputKey
      + toKey: InputKey
      + duration: Long
    }
    class KeyUp <<(S,#FFF3E0)>> {
      + key: InputKey
    }
    class Wait <<(S,#FFF3E0)>> {
      + duration: Long
    }
    class SelectCandidate <<(S,#FFF3E0)>> {
      + candidateIndex: Int
    }
    class SwitchKeyboard <<(S,#FFF3E0)>> {
      + targetType: KeyboardType
    }
    InputAction <|-- KeyDown
    InputAction <|-- SwipeTo
    InputAction <|-- KeyUp
    InputAction <|-- Wait
    InputAction <|-- SelectCandidate
    InputAction <|-- SwitchKeyboard
  }

  class InputActionScript <<(D,#FFF3E0)>> {
    + name: String
    + description: String
    + inputActionMode: InputActionMode
    + actions: List<InputAction>
    + totalDuration: Long
  }

  class InputActionScriptCompiler <<(C,#FFF3E0)>> {
    - keyTableProvider: (KeyboardType) -> List<List<InputKey>>
    + compile(text, method, speed): InputActionScript
    - compileTapActions(...)
    - compileSwipeActions(...)
    - compileXPadActions(...)
  }

  abstract class InputActionPlayerState <<(S,#E8F5E9)>> {
  }
  class Idle <<(S,#E8F5E9)>> {
  }
  class Ready <<(S,#E8F5E9)>> {
    + script: InputActionScript
  }
  class Playing <<(S,#E8F5E9)>> {
    + currentIndex: Int
    + totalActions: Int
  }
  class Paused <<(S,#E8F5E9)>> {
    + currentIndex: Int
    + totalActions: Int
  }
  class Finished <<(S,#E8F5E9)>> {
  }
  InputActionPlayerState <|-- Idle
  InputActionPlayerState <|-- Ready
  InputActionPlayerState <|-- Playing
  InputActionPlayerState <|-- Paused
  InputActionPlayerState <|-- Finished

  class InputActionFingerIndicator <<(D,#FFF3E0)>> {
    + position: OffsetF
    + pressed: Boolean
    + visible: Boolean = true
    + clickAnimation: ClickAnimation?
  }
  note right of InputActionFingerIndicator
    绘制手指图形 + 跟随滑行轨迹
    + 点击动画
  end note

  class ClickAnimation <<(D,#FFF3E0)>> {
    + progress: Float
    + maxRadius: Float = 0.05f
    + color: Long = 0x332196F3L
  }
  note right of ClickAnimation
    按键点击涟漪动画
  end note

  class InputActionPathInterpolator <<(O,#FFF3E0)>> {
    + interpolate(from, to, arcFactor, steps): List<OffsetF>
  }
  note right of InputActionPathInterpolator
    二次贝塞尔曲线插值
    归一化坐标输入输出
  end note

  interface InputActionPositionResolver <<(I,#FFF3E0)>> {
    + resolve(key): OffsetF?
    + resolveCandidatePosition(index): OffsetF?
    + resolveInputItemPosition(index): OffsetF?
  }
  note right of InputActionPositionResolver
    接口定义在 :ime-engine
    实现在 :ime-ui
  end note

  class OffsetF <<(D,#FFF3E0)>> {
    + x: Float
    + y: Float
  }
  class RectF <<(D,#FFF3E0)>> {
    + left, top, right, bottom: Float
    + center: OffsetF
  }
}

' ===== :ime-ui 模块 =====

package ":ime-ui" #E8F5E9 {

  class InputActionPlayer <<(C,#E8F5E9)>> {
    - viewModel: KeyboardViewModel
    - feedbackState: GestureFeedbackState
    - positionResolver: InputActionPositionResolver
    - scope: CoroutineScope
    + playbackState: StateFlow<InputActionPlayerState>
    + speed: StateFlow<Float>
    + row1IndicatorState: StateFlow<InputActionFingerIndicator?>
    + row2IndicatorState: StateFlow<InputActionFingerIndicator?>
    + load(script)
    + play()
    + pause()
    + resume()
    + stop()
    + stepForward()
    + setSpeed(speed)
    - executeAction(action)
    - animateClickAnimation(feedbackState, position)
    - animateFingerAlongPath(feedbackState, path, duration)
  }

  class ComposeInputActionPositionResolver <<(C,#E8F5E9)>> {
    - keyboardLayoutStateProvider: () -> KeyLayoutState?
    - candidateLayoutStateProvider: () -> CandidateListLayoutState?
    - inputListLayoutStateProvider: () -> InputListLayoutState?
    + resolve(key): OffsetF?
    + resolveCandidatePosition(index): OffsetF?
    + resolveInputItemPosition(index): OffsetF?
  }

  class GestureFeedbackState <<(C,#E8F5E9)>> {
    + touchTrailPoints: StateFlow<List<OffsetF>>
    + pressedKeys: StateFlow<Set<InputKey>>
    + fingerIndicator: StateFlow<InputActionFingerIndicator?>
    + setFingerIndicator(state?)
    + setTouchTrailPoints(points)
    + setPressedKeys(keys)
    + clearAll()
  }

  class KeyboardInputActionPlayerHost <<(C,#E8F5E9)>> {
    + UseMode.Animation
    + UseMode.DirectInput
    组合 KeyboardHost + 播放引擎
    showIndicator 控制
    row1/row2 Indicator 传递
  }

  class InputActionPlayerPanel <<(C,#E8F5E9)>> {
    + 输入练习播放控制面板
  }

  class KeyboardHost <<(C,#E8F5E9)>> {
    + (Composable) KeyboardHost(viewModel)
    Stacked/Separated 布局
  }

  class KeyboardViewModel <<(C,#E8F5E9)>> {
    + state: StateFlow<ImeState>
    + feedbackState: GestureFeedbackState
    + actionPlayer: InputActionPlayer
    + handleIntent(intent)
    + updateKeyLayoutState(state)
  }

  class InputActionScriptLoader <<(C,#E8F5E9)>> {
    - context: Context
    + loadPreset(name): InputActionScript
    + listPresets(): List<String>
    + loadFromFile(uri): InputActionScript
    - parseScript(json): InputActionScript
  }

  class KeyLayoutState <<(D,#E8F5E9)>> {
    + keyPositions: Map<InputKey, RectF>
    + panelSize: Size
  }
  class CandidateListLayoutState <<(D,#E8F5E9)>> {
    + candidatePositions: List<Rect>
    + panelSize: Size
  }
  class InputListLayoutState <<(D,#E8F5E9)>> {
    + itemPositions: List<Rect>
    + panelSize: Size
  }
}

' ===== :app 模块 =====
package ":app" #E3F2FD {
  class IMEService <<(C,#E3F2FD)>> {
    创建 ImeEngine
    创建 InputConnectionBridge
    注入 KeyboardViewModel.Factory
  }
  class ExerciseScreen <<(C,#E3F2FD)>> {
    + 练习与演示界面
  }
}

' ===== 关系 =====

InputActionScript *-- InputAction : actions
InputActionScriptCompiler ..> InputActionScript : 编译生成
InputActionScriptCompiler ..> InputAction : 生成

InputActionFingerIndicator *-- ClickAnimation : clickAnimation
InputActionFingerIndicator *-- OffsetF : position

InputActionPositionResolver <|.. ComposeInputActionPositionResolver : :ime-ui 实现

InputActionPlayer --> InputActionPositionResolver : 坐标解析
InputActionPlayer --> GestureFeedbackState : 驱动反馈
InputActionPlayer --> KeyboardViewModel : handleIntent
InputActionPlayer *-- InputActionPlayerState : 播放状态
InputActionPlayer ..> InputActionFingerIndicator : 创建/更新
InputActionPlayer ..> InputActionPathInterpolator : 路径插值
InputActionPlayer ..> ClickAnimation : 创建涟漪

ComposeInputActionPositionResolver --> KeyLayoutState : 读取
ComposeInputActionPositionResolver --> CandidateListLayoutState : 读取
ComposeInputActionPositionResolver --> InputListLayoutState : 读取

KeyboardViewModel *-- InputActionPlayer : 创建
KeyboardViewModel *-- GestureFeedbackState : 持有
KeyboardViewModel --> ComposeInputActionPositionResolver : 创建(惰性提供者)

KeyboardInputActionPlayerHost --> KeyboardHost : 组合
KeyboardInputActionPlayerHost --> KeyboardViewModel : viewModel
KeyboardInputActionPlayerHost ..> InputActionFingerIndicator : 传递 Row 1/2 指示器

IMEService --> KeyboardViewModel : Factory(engine)

InputActionScriptLoader ..> InputActionScript : 加载

ExerciseScreen --> InputActionPlayerPanel : 使用
InputActionPlayerPanel --> KeyboardInputActionPlayerHost : 组合

@enduml
